--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
     <scope>test</scope>
 </dependency>
 
+<dependency>
+    <groupId>com.github.tomakehurst</groupId>
+    <artifactId>wiremock-jre8</artifactId>
+    <version>2.27.0</version>
+    <scope>test</scope>
+</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
